--- a/src/socialMedia.Api/SocialMedia.APi.csproj
+++ b/src/socialMedia.Api/SocialMedia.APi.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\SocialMedia.Infrastructure\SocialMedia.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Attachments\" />
+  </ItemGroup>
+
 </Project>
