--- a/src/socialMedia.Api/appsettings.json
+++ b/src/socialMedia.Api/appsettings.json
@@ -3,11 +3,20 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=test5;UserName=postgres;Password=m12345;trust server certificate=true"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Mohammed hasen",
+    "SenderEmail": "mrshadowsmohammad@gmail.com",
+    "Username": "mrshadowsmohammad@gmail.com",
+    "Password": "inynallxzohgityg",
+    "UseSsl": true
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
